
v1.1.1 - October 31, 2025
- Lowered default attack speed to 0.5


========================================================
v1.2 - November 5, 2025 - Weapons Update
- Added 2 new guns
- fixed tech from resetting after each floor
- added weapon peirce
- added weapon spread visualiser
- added more customizable weapon spread
- added a way to customize weapon stats mid game

v1.2.1 - November 5, 2025
- finally fixed changelog display

========================================================
v1.3 - November 5, 2025 - Game Update
- added a main menu!
- added pause screen!
- wider screen!
- game saves!

v1.3.1 - November 5, 2025
- fixed old menu 

v1.3.2 - November 5, 2025
- fixed particles!
- added customizable options

v1.3.3 - November 5, 2025
- fixed menu ai interracting with level that player is enterred into.
- reverted larger screen size due to hud breaks, it will be implemented later.

========================================================
v1.4 - November 5, 2025 - The statistics and settings Update
- Added setting section toggles
- added moveable sections, keep your favs at the top!
- Added tons more player stats!
- Added radar graph to display stats
- added attribute upgrades to each level!!!
- added luck!

v1.4.1 - November 5, 2025
- Changed attributes to a percentage system.

v1.4.2 - November 7, 2025
- Attempted to add a second radar graph
- Added debug toggles

==========================================================

v1.5 - November 10, 2025 - The Difficulty Update.
- Added scaling enemy Difficulty
- Added more AIs to the game!

v1.5.1 - November 11, 2025
- Added like, a ton of new guns! Enjoy!
- Added a graph to display enemy stats
- Tweaked spawn rates and fixed enemy scaling

v1.5.2 - November 12, 2025
- Added damage numbers
- Added weapon upgrades!!!!

v1.5.3 - November 12, 2025
- Added Bosses to the game (level will guarantee a high tier upgrade)
- Bosses currently have 5x stats of regular enemies.